# flappy_bird

./: backend.c  backend.h  better_update.c  ej  flappy_bird  frontend.c  frontend.h  main.c  proyect_structure.txt
code/: README.md  backend.c  backend.h  flappy_bird  frontend.c  frontend.h  main.c  makefile
game plan/: coding_reference  coding_reference.txt  flowchart  multifile_diagram  proyect_structure.txt
ncurses/: README.md  backend.c  flappy_bird  frontend.c  frontend.h  main.c  makefile
prueba_col/: backend.c  backend.h  flappy_bird  frontend.c  frontend.h  main.c
sdl2/: CMakeLists.txt  Makefile  README.md  main.c  structs.h
sdl2/backend/: backend.h  bird_fun.c  column_fun.c  game_logic.c  game_logic.h  init_fun.c  init_fun.h  input.c  menu.c  menu.h  running_fun.c  running_fun.h  structs.h
sdl2/frontend/: front_main_game.c  front_main_game.h  front_menu.c  front_menu.h  frontend.c  frontend.h  main_game.c  render_helpers.c  render_helpers.h  structs.h  windows.c
sdl2/img/birds/: !notes.txt
sdl2/img/columns/: columns.txt
sdl2/img/simbols/: info.txt
